2008-11-16  Christian Dywan  <christian@twoasts.de>

Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=22207
        [Gtk] Font sizes are not handled properly when updated at runtime

        * webkit/webkitwebview.cpp: Move the DPI/ conversion into a
        helper function and apply the logic in the notification callback.

Canonical link: https://commits.webkit.org/30659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38446 268f45cc-cd09-0410-ab3c-d52691b4dbfc